[package]
name = "golem_factory_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.9"
clap = { version = "3.0.7", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.133", features = ["derive"]}
regex = "1.5.4"
indicatif = "0.16.2"